Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/booking-page.mdx
+++ b/app-builder/builder/pages/booking-page.mdx
@@ -11,7 +11,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption="Bố cục Booking">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image521_7660f97a1c.png"
     alt="Các kiểu bố cục hiển thị Booking: dọc, ngang, trượt ngang, tab danh mục, danh sách, nhóm danh mục"
     style={{ borderRadius:"0.5rem" }}
     title="Bố cục Booking"
@@ -28,29 +28,27 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
     <Frame caption="Nút thêm dữ liệu">
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image522_adf8f5fcfe.png"
         alt="Nút thêm dữ liệu mới trong giao diện Booking"
         style={{ borderRadius:"0.5rem" }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
   </Step>
-
   <Step title="Nhập thông tin danh mục & chọn liên kết, hình ảnh, danh mục con">
-    - Nhập **tên danh mục** và chọn **link liên kết**  
-    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** cho **danh mục** và **banner danh mục**  
+    - Nhập **tên danh mục** và chọn **link liên kết**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** cho **danh mục** và **banner danh mục**
     - Chọn **danh mục con** (nếu có)
 
     <Frame caption="Thêm dữ liệu cho danh mục Booking">
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image523_80f9a0687f.png"
         alt="Giao diện nhập thông tin danh mục, banner và danh mục con cho Booking"
         style={{ borderRadius:"0.5rem" }}
         title="Thêm dữ liệu danh mục Booking"
       />
     </Frame>
   </Step>
-
   <Step title="Xác nhận thêm dữ liệu">
     Người dùng nhấn **“Thêm dữ liệu”** để hoàn tất việc thêm danh mục,\
     hoặc nhấn **“Hủy bỏ”** để hủy thao tác.
@@ -65,29 +63,27 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
     <Frame caption="Nút chỉnh sửa">
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image524_c3dab2290f.png"
         alt="Nút chỉnh sửa danh mục Booking trong giao diện quản lý"
         style={{ borderRadius:"0.5rem" }}
         title="Nút chỉnh sửa danh mục"
       />
     </Frame>
   </Step>
-
   <Step title="Chỉnh sửa thông tin danh mục">
-    - Nhập **tên danh mục** và **link liên kết**  
-    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi **ảnh danh mục** và **banner danh mục**  
+    - Nhập **tên danh mục** và **link liên kết**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi **ảnh danh mục** và **banner danh mục**
     - Chọn lại **danh mục con** (nếu cần)
 
     <Frame caption="Trang chỉnh sửa dữ liệu Booking">
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image525_928cc91e88.png"
         alt="Giao diện chỉnh sửa danh mục, ảnh và danh mục con trong Booking"
         style={{ borderRadius:"0.5rem" }}
         title="Trang chỉnh sửa dữ liệu"
       />
     </Frame>
   </Step>
-
   <Step title="Lưu chỉnh sửa hoặc hủy thao tác">
     Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật,\
     hoặc nhấn **“Hủy bỏ”** nếu không muốn lưu thay đổi.
@@ -102,14 +98,13 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
     <Frame caption="Nút xóa">
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image526_fa66659a6c.png"
         alt="Nút xóa danh mục Booking trong giao diện quản lý"
         style={{ borderRadius:"0.5rem" }}
         title="Nút xóa danh mục"
       />
     </Frame>
   </Step>
-
   <Step title="Xác nhận thao tác xóa">
     Khi hộp thoại xác nhận xuất hiện, người dùng chọn **“Xóa ngay”** để tiến hành xóa,\
     hoặc chọn **“Hủy”** nếu không muốn thực hiện thao tác này.
@@ -118,150 +113,179 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 **Tiêu đề**
 
-**Nền**  
+**Nền**
+
 - Chọn **màu nền** cho **tiêu đề dịch vụ** bằng cách nhấn ô vuông rồi chọn màu.
+
 <Frame caption="Tiêu đề dịch vụ">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image528_2f84c4911f.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Tiêu đề Booking"
   />
 </Frame>
-- Bật/tắt có **màu nền** hoặc **không có màu nền** bằng nút ![][image68].  
+
+- Bật/tắt có **màu nền** hoặc **không có màu nền** bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.
 - Xóa màu nền bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
 
-**Hiển thị tiêu đề**  
-- Nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt **có tiêu đề** và **không có tiêu đề**; có thể **nhập nội dung tiêu đề** (ví dụ: “Danh mục dịch vụ”).  
+**Hiển thị tiêu đề**
+
+- Nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt **có tiêu đề** và **không có tiêu đề**; có thể **nhập nội dung tiêu đề** (ví dụ: “Danh mục dịch vụ”).
 
 <Frame caption="Tiêu đề dịch vụ">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image529_9be3f42d57.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Tiêu đề Booking"
   />
 </Frame>
 
-**Cỡ chữ**  
-- Điều chỉnh **kích thước chữ** cho **tiêu đề** tại 
+**Cỡ chữ**
+
+- Điều chỉnh **kích thước chữ** cho **tiêu đề** tại
+
 <Frame caption="Tiêu đề dịch vụ">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image530_e3a8306767.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Tiêu đề Booking"
   />
 </Frame>
 
-**Màu chữ**  
-- Thay đổi **màu chữ tiêu đề** tại 
+**Màu chữ**
+
+- Thay đổi **màu chữ tiêu đề** tại
+
 <Frame caption="Tiêu đề dịch vụ">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image531_98aa1a6966.png"
     alt="Ví dụ hiển thị tiêu đề phần Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Tiêu đề Booking"
   />
 </Frame>
 
-**Hiển thị icon**  
+**Hiển thị icon**
+
 - Bật/tắt **hiển thị icon** trong tiêu đề bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
 **Danh mục chính**
 
-**Nền**  
+**Nền**
+
 - Chọn **màu nền** cho **danh mục chính** bằng cách nhấn ô vuông rồi chọn màu
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image532_f4876aa58a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
-</Frame>  
-- Bật/tắt màu nền bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.  
+</Frame>
+
+- Bật/tắt màu nền bằng nút <Icon icon="eye" color="#cfcfcf" size={15} />.
 - Xóa màu nền bằng nút <Icon icon="minus" color="#cfcfcf" size={15} />.
 
-**Hiển thị icon / hình ảnh**  
+**Hiển thị icon / hình ảnh**
+
 - Bật/tắt **hiển thị icon/hình ảnh** cho danh mục chính bằng nút  <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Kích thước**  
-- Nhập hoặc tăng/giảm **kích thước** của danh mục chính tại 
+**Kích thước**
+
+- Nhập hoặc tăng/giảm **kích thước** của danh mục chính tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image533_3837c7ee14.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Kiểu hình ảnh**  
+**Kiểu hình ảnh**
+
 - Chọn **kiểu hình ảnh** cho danh mục chính tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image534_7c646a5875.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Bo góc**  
+**Bo góc**
+
 <Frame caption>
   <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-  hoặc **chỉnh riêng lẻ từng góc** bằng nút 
-<Frame caption>
-  <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image535_f82a2ee523.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Hiển thị tên danh mục**  
+hoặc **chỉnh riêng lẻ từng góc** bằng nút
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image536_f325984f25.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Hiển thị tên danh mục**
+
 - Bật/tắt **tên danh mục** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Kích thước / Màu sắc**  
-- Điều chỉnh **kích thước** và **màu sắc** cho danh mục chính tại 
+**Kích thước / Màu sắc**
+
+- Điều chỉnh **kích thước** và **màu sắc** cho danh mục chính tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image537_86fcf04df3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Hiển thị danh mục phụ**  
+**Hiển thị danh mục phụ**
+
 - Bật/tắt **danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
 **Danh mục phụ**
 
-**Hiển thị tên**  
+**Hiển thị tên**
+
 - Bật/tắt **tên danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị hình ảnh**  
+**Hiển thị hình ảnh**
+
 - Bật/tắt **hình ảnh danh mục phụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
 **Banner**
 
-**Hiển thị banner**  
+**Hiển thị banner**
+
 - Bật/tắt **banner** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Chiều cao**  
-- Nhập hoặc tăng/giảm **chiều cao** của banner tại 
+**Chiều cao**
+
+- Nhập hoặc tăng/giảm **chiều cao** của banner tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image538_e83c5e6628.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -274,7 +298,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image539_a0b9d90055.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -285,7 +309,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image540_830a80f9ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -296,7 +320,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image541_7e012a7e49.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -309,7 +333,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image542_820bac9f28.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -320,7 +344,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image543_c9a0efb888.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -331,7 +355,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image544_e80825a05e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -343,7 +367,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị **dịch vụ
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image545_043cfa37d4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -354,18 +378,19 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image546_ffa9d22fe4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - **Viền**
   - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image547_15ac085dd5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -376,7 +401,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image548_921979d7dc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -390,7 +415,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image549_9ab97ad04f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -401,7 +426,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image550_f1cf6f542a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -419,7 +444,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image551_d66e64858e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -430,7 +455,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image552_42a485f88f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -441,7 +466,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image553_86f09d6ed4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -454,7 +479,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image554_1e2fa2ea9c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -465,7 +490,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image555_8602e8af3d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -476,29 +501,33 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image556_73397203b5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Chiều cao**  
-- Nhập hoặc tăng/giảm **chiều cao** của **thẻ dịch vụ** tại 
+**Chiều cao**
+
+- Nhập hoặc tăng/giảm **chiều cao** của **thẻ dịch vụ** tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image557_5f719b2eb3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-**Kiểu hình ảnh**  
-- Chọn **kiểu hình ảnh** của **thẻ dịch vụ** tại 
+**Kiểu hình ảnh**
+
+- Chọn **kiểu hình ảnh** của **thẻ dịch vụ** tại
+
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image558_f1c15854a9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -510,7 +539,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image559_d8fbf8006e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -524,7 +553,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image560_5b34e3e7e9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -535,18 +564,19 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image561_551737fccc.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+
 - **Viền**
   - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image562_ba47fa03e2.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -557,7 +587,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image563_8e537a2d54.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -571,7 +601,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image564_8cc066aa0a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -582,7 +612,7 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image565_a6a6b2d726.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -592,71 +622,96 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 - Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
 - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
-**Hiển thị tên dịch vụ**  
+**Hiển thị tên dịch vụ**
+
 - Bật/tắt **Tên dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị danh mục**  
+**Hiển thị danh mục**
+
 - Bật/tắt **Danh mục** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị giá tiền**  
+**Hiển thị giá tiền**
+
 - Bật/tắt **Giá tiền** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị giá giảm**  
-- Chọn **kiểu hiển thị giá giảm** (theo phần trăm hoặc giá gốc) tại <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+**Hiển thị giá giảm**
 
-**Sản phẩm Sale**  
-- Bật/tắt **hiển thị sale** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+- Chọn **kiểu hiển thị giá giảm** (theo phần trăm hoặc giá gốc) tại
 
-**Hiển thị nhãn**  
-- Chọn **ẩn nhãn** hoặc hiển thị **FlashSale**, **Bán chạy**, **Mới nhất** tại 
 <Frame caption="Kiểu nút đặt lịch (icon / button)">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image566_6b25362776.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Sản phẩm Sale**
+
+- Bật/tắt **hiển thị sale** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
+
+**Hiển thị nhãn**
+
+- Chọn **ẩn nhãn** hoặc hiển thị **FlashSale**, **Bán chạy**, **Mới nhất** tại
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image567_bb39db981f.png"
     alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Kiểu nút đặt lịch"
   />
 </Frame>
 
-**Hiển thị yêu thích**  
+**Hiển thị yêu thích**
+
 - Bật/tắt **nút yêu thích** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị đánh giá**  
+**Hiển thị đánh giá**
+
 - Bật/tắt **số sao đánh giá** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị loại dịch vụ**  
+**Hiển thị loại dịch vụ**
+
 - Bật/tắt **loại dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị thời gian dịch vụ**  
+**Hiển thị thời gian dịch vụ**
+
 - Bật/tắt **thời gian dịch vụ** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị số lượng yêu thích**  
+**Hiển thị số lượng yêu thích**
+
 - Bật/tắt **số lượng yêu thích** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị số lượng đã đặt**  
+**Hiển thị số lượng đã đặt**
+
 - Bật/tắt **số lượng đã đặt/đã bán** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Hiển thị nút đặt lịch**  
+**Hiển thị nút đặt lịch**
+
 - Bật/tắt **nút đặt lịch** bằng nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} />.
 
-**Kiểu nút đặt lịch**  
+**Kiểu nút đặt lịch**
+
 - Chọn hiển thị **nút đặt lịch** ở dạng **icon** hoặc **button**.
 
 <Frame caption="Kiểu nút đặt lịch (icon / button)">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image568_e80ffad6e3.png"
     alt="Tùy chọn hiển thị nút đặt lịch dạng icon hoặc button trong Booking"
     style={{ borderRadius:"0.5rem" }}
     title="Kiểu nút đặt lịch"
   />
 </Frame>
 
-**Kiểu thẻ dịch vụ**  
+**Kiểu thẻ dịch vụ**
+
 - Chọn hiển thị **thẻ dịch vụ** theo **ngang** hoặc **dọc**.
 
 <Frame caption="Kiểu thẻ dịch vụ (ngang / dọc)">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image569_1a712a59ae.png"
     alt="Tùy chọn thẻ dịch vụ hiển thị theo chiều ngang hoặc dọc"
     style={{ borderRadius:"0.5rem" }}
     title="Kiểu thẻ dịch vụ"
