Documentation edits made through Mintlify web editor

--- a/app-builder/builder/img-library.mdx
+++ b/app-builder/builder/img-library.mdx
@@ -8,66 +8,85 @@ icon: "photo-film"
 
 Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình ảnh được sử dụng trong ứng dụng.
 
-<Frame caption="Thư viện hình ảnh  ">
+<Frame caption="Thư viện hình ảnh">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image167_efaa8051c7.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    alt="Thư viện hình ảnh trong giao diện quản trị"
     style={{ borderRadius:"0.5rem" }}
-    title=""
+    title="Thư viện hình ảnh"
   />
 </Frame>
 
-**Tải ảnh mới:**
+**Tải ảnh mới**
 
-- **Bước 1**: Người dùng nhấn vào nút "**Tải ảnh mới**"
+<Steps>
+  <Step title="Nhấn vào nút Tải ảnh mới">
+    Người dùng nhấn vào nút **“Tải ảnh mới”**.
 
-<Frame caption="Nút thêm mới  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image210_8700753a74.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Nút Tải ảnh mới">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image210_8700753a74.png"
+        alt="Nút Tải ảnh mới trong thư viện hình ảnh"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút Tải ảnh mới"
+      />
+    </Frame>
+  </Step>
 
-- **Bước 2:**
-  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện"
-- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm mới hoặc nhấn "**Hủy bỏ**" để hủy quá trình thêm dữ liệu
+  <Step title="Chọn ảnh tải lên">
+    Người dùng nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để chọn hình ảnh cần thêm.
+  </Step>
 
-**Xem:**
+  <Step title="Xác nhận thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để tiến hành thêm mới,\
+    hoặc nhấn **“Hủy bỏ”** để hủy quá trình thêm dữ liệu.
+  </Step>
+</Steps>
 
-Người dùng nhấn <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết hình ảnh
+**Xem**
 
-<Frame caption="Nút xem hình ảnh ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image108_c62d1fa692.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Xem chi tiết hình ảnh">
+    Người dùng nhấn <Icon icon="eye" color="#cfcfcf" size={15} /> để **xem chi tiết** hình ảnh.
 
-**Xóa:**\
-Người dùng nhấn <Icon icon="trash-can" color="#cfcfcf" size={15} /> để xóa bỏ hình ảnh
+    <Frame caption="Nút xem hình ảnh">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image108_c62d1fa692.png"
+        alt="Nút xem chi tiết hình ảnh trong thư viện"
+        style={{ borderRadius:"0.5rem" }}
+        title="Xem hình ảnh"
+      />
+    </Frame>
+  </Step>
+</Steps>
 
-<Frame caption="Nút xóa hình ảnh  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image170_30120f526a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+**Xóa**
 
-**Hình ảnh của tôi**: hiển thị tất cả hình ảnh mà người dùng đã tải lên.
+<Steps>
+  <Step title="Xóa hình ảnh">
+    Người dùng nhấn <Icon icon="trash-can" color="#cfcfcf" size={15} /> để **xóa** hình ảnh.
 
-**Thư viện hình ảnh**: cung cấp hình ảnh mẫu từ hệ thống.
+    <Frame caption="Nút xóa hình ảnh">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image170_30120f526a.png"
+        alt="Nút xóa hình ảnh trong thư viện"
+        style={{ borderRadius:"0.5rem" }}
+        title="Xóa hình ảnh"
+      />
+    </Frame>
+  </Step>
+</Steps>
 
-<Frame caption="Thư viện ảnh ">
+**Nguồn ảnh**
+
+- **Hình ảnh của tôi**: hiển thị tất cả hình ảnh mà người dùng đã tải lên.  
+- **Thư viện hình ảnh**: cung cấp hình ảnh mẫu từ hệ thống.
+
+<Frame caption="Thư viện ảnh hệ thống">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image44_8a6961305a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    alt="Thư viện ảnh mẫu do hệ thống cung cấp"
     style={{ borderRadius:"0.5rem" }}
-    title=""
+    title="Thư viện ảnh hệ thống"
   />
 </Frame>
