Documentation edits made through Mintlify web editor

--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -4,79 +4,68 @@ description: "Description of your new file."
 icon: "grid-round-2-plus"
 ---
 
-## **3.2. Navigation Bar**
+## **3.2. Navigation Bar** 
 
-Chức năng **Navigation Bar** cho phép người dùng quản lý và tùy chỉnh thanh điều hướng của Mini App: thêm trang, sắp xếp, chỉnh sửa, xóa
-trang, chọn mẫu và điều chỉnh giao diện.
+Người dùng có thể thao tác với **thanh điều hướng (Navigation Bar)** bao gồm:
 
-<Frame>
+- Thêm trang mới trên thanh điều hướng  
+- Kéo thả để thay đổi vị trí các trang  
+- Chỉnh sửa trang  
+- Xóa trang  
+- Chọn mẫu thanh điều hướng phù hợp  
+- Tùy chỉnh các chỉ số hiển thị của thanh điều hướng
+
+<Frame caption="Giao diện thanh điều hướng">
   <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/Nav_Settings_5515dc6952.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image570_ba08464394.png"
+    alt="Giao diện thanh Navigation Bar trong bảng quản trị"
     style={{ borderRadius:"0.5rem" }}
-    title=""
+    title="Giao diện Navigation Bar"
   />
 </Frame>
 
-### Kéo thả thay đổi vị trí Menu
+---
 
-<Frame>
-  <img
-    src="/general-settings.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+### **a. Thêm trang mới trên thanh điều hướng**
 
 <Steps>
-  <Step title="Nhấn giữ biểu tượng">
-    Nhấn giữ biểu tượng ![][image20] của trang cần di chuyển.
-  </Step>
-  <Step title="Kéo đến vị trí mong muốn">
-    Di chuyển trang đến vị trí mong muốn trong thanh điều hướng.\
-    ![][image21]
-  </Step>
-  <Step title="Hoàn tất sắp xếp">
-    Vị trí các trang sẽ được cập nhật ngay lập tức.
-  </Step>
-</Steps>
+  <Step title="Nhấn vào nút Thêm trang mới">
+    Người dùng nhấn nút **“Thêm trang mới”** để bắt đầu.
 
-### Thêm trang mới trên thanh điều hướng
-
-<Steps>
-  <Step title="Nhấn Thêm trang mới">
-    <Frame>
+    <Frame caption="Nút thêm trang mới">
       <img
-        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_add_more_88bee4b6cb.png"
-        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image571_56c21bd7c7.png"
+        alt="Nút thêm trang mới trong giao diện Navigation Bar"
         style={{ borderRadius:"0.5rem" }}
-        title=""
+        title="Nút thêm trang mới"
       />
     </Frame>
   </Step>
-  <Step title="Nhập thông tin trang">
-    <Frame>
+
+  <Step title="Nhập thông tin trang mới">
+    - Nhập **tên trang**  
+    - Chọn **đường dẫn đến trang**: trang sẽ hiển thị khi người dùng nhấn nút này  
+    - Chọn **Icon mặc định** và **Icon kích hoạt**
+
+    <Frame caption="Form nhập thông tin trang mới">
       <img
-        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_info_08bf00dfbe.png"
-        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image572_0f111020ca.png"
+        alt="Form nhập thông tin trang trong Navigation Bar"
         style={{ borderRadius:"0.5rem" }}
-        title=""
+        title="Form nhập thông tin trang mới"
       />
     </Frame>
-    - **Tên trang**
-    - **Đường dẫn đến trang**
-    - **Icon mặc định & Icon kích hoạt**
   </Step>
+
   <Step title="Xác nhận thêm trang">
-    Nhấn **Thêm trang** để lưu hoặc **Hủy bỏ** để thoát.
+    Người dùng nhấn **“Thêm trang”** để hoàn tất hoặc **“Hủy bỏ”** để hủy thao tác thêm trang.
 
-    <Frame>
+    <Frame caption="Xác nhận thêm trang">
       <img
-        src="https://aimini-upload.sgp1.digitaloceanspaces.com/nav_info_confirm_bebbf32257.png"
-        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image573_866e298ade.png"
+        alt="Xác nhận thêm trang mới trong Navigation Bar"
         style={{ borderRadius:"0.5rem" }}
-        title=""
+        title="Xác nhận thêm trang"
       />
     </Frame>
   </Step>
@@ -84,115 +73,134 @@ trang, chọn mẫu và điều chỉnh giao diện.
 
 ---
 
-### Chọn mẫu thanh điều hướng
-
-<Frame>
-  <img
-    src="/general-settings.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+### **b. Kéo thả để thay đổi vị trí các trang**
 
 <Steps>
-  <Step title="Mở danh sách mẫu">
-    Tại mục **Các mẫu thanh điều hướng**, nhấn **Xem thêm**.\
-    ![][image29]
-  </Step>
-  <Step title="Chọn mẫu mong muốn">
-    Chọn mẫu trong danh sách và nhấn biểu tượng ![][image30] để áp dụng.\
-    ![][image31]
-  </Step>
-  <Step title="Hoàn tất">
-    Thanh điều hướng được thay đổi theo lựa chọn của người dùng.
+  <Step title="Kéo thả để sắp xếp thứ tự trang">
+    Nhấn giữ biểu tượng <Icon icon="grip-vertical" color="#cfcfcf" size={15} /> tương ứng với từng trang, sau đó kéo đến vị trí mong muốn để thay đổi thứ tự hiển thị trên thanh điều hướng.  
+
+    <Frame caption="Thay đổi vị trí các trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image574_eea98aac07.png"
+        alt="Thay đổi vị trí các trang trên Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Kéo thả vị trí trang"
+      />
+    </Frame>
   </Step>
 </Steps>
 
 ---
 
-### Chỉnh sửa trang
-
-<Frame>
-  <img
-    src="/general-settings.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+### **c. Chỉnh sửa trang**
 
 <Steps>
-  <Step title="Chọn biểu tượng chỉnh sửa">
-    Nhấn vào biểu tượng ![][image22] của trang muốn chỉnh sửa.
-    ![][image23]
+  <Step title="Nhấn vào biểu tượng chỉnh sửa">
+    Người dùng nhấn biểu tượng <Icon icon="pencil" color="#cfcfcf" size={15} /> tương ứng với trang muốn chỉnh sửa.
+
+    <Frame caption="Nút chỉnh sửa trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image575_c9877f4a9b.png"
+        alt="Nút chỉnh sửa trang trên Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Chỉnh sửa trang"
+      />
+    </Frame>
   </Step>
-  <Step title="Nhập dữ liệu mới">
-    - **Tên trang**
-    - **Đường dẫn**
-    - **Icon mặc định & Icon kích hoạt**
-      ![][image24]
+
+  <Step title="Chỉnh sửa thông tin trang">
+    - Nhập **tên trang**  
+    - Chỉnh sửa **đường dẫn đến trang**  
+    - Chọn lại **Icon mặc định** và **Icon kích hoạt**
+
+    <Frame caption="Form chỉnh sửa dữ liệu trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image576_1b87269328.png"
+        alt="Form chỉnh sửa dữ liệu Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Chỉnh sửa dữ liệu trang"
+      />
+    </Frame>
   </Step>
-  <Step title="Lưu hoặc hủy thao tác">
-    Nhấn **Lưu chỉnh sửa** để áp dụng thay đổi hoặc **Hủy bỏ** để thoát.\
-    ![][image25]
+
+  <Step title="Lưu hoặc hủy chỉnh sửa">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để cập nhật thông tin hoặc **“Hủy bỏ”** nếu không muốn thay đổi.
+
+    <Frame caption="Lưu hoặc hủy chỉnh sửa trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image577_43413dd6a4.png"
+        alt="Lưu hoặc hủy chỉnh sửa trang"
+        style={{ borderRadius:"0.5rem" }}
+        title="Lưu chỉnh sửa"
+      />
+    </Frame>
   </Step>
 </Steps>
 
 ---
 
-### Xóa trang
-
-<Frame>
-  <img
-    src="/general-settings.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+### **d. Xóa trang**
 
 <Steps>
-  <Step title="Chọn biểu tượng Xóa">
-    Nhấn biểu tượng ![][image26] của trang muốn xóa.\
-    ![][image27]
+  <Step title="Nhấn vào biểu tượng xóa">
+    Người dùng nhấn biểu tượng <Icon icon="trash-can" color="#cfcfcf" size={15} /> để xóa trang khỏi thanh điều hướng.
+
+    <Frame caption="Nút xóa trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image578_da468b4797.png"
+        alt="Nút xóa trang trong Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa trang"
+      />
+    </Frame>
   </Step>
-  <Step title="Xác nhận thao tác">
-    - Nhấn **Xóa ngay** để xóa vĩnh viễn
-    - Nhấn **Hủy** để thoát\
-      ![][image28]
+
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thoại xuất hiện, người dùng chọn **“Xóa ngay”** để xác nhận hoặc **“Hủy”** để hủy thao tác.
+
+    <Frame caption="Hộp xác nhận xóa trang">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image679_a8b7107cd0.png"
+        alt="Xác nhận xóa trang trong Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Xác nhận xóa"
+      />
+    </Frame>
   </Step>
 </Steps>
 
 ---
 
-### Điều chỉnh các chỉ số thanh điều hướng
-
-<Frame>
-  <img
-    src="/general-settings.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
+### **e. Chọn mẫu thanh điều hướng**
 
 <Steps>
-  <Step title="Thiết lập khoảng cách (Margin & Padding)">
-    - **Lề ngoài (Margin):** chỉnh khoảng cách giữa thanh điều hướng và màn hình
-    - **Lề trong (Padding):** chỉnh khoảng cách giữa nội dung và thanh điều hướng\
-      ![][image32]
+  <Step title="Xem thêm mẫu thanh điều hướng">
+    Tại phần **“Các mẫu thanh điều hướng”**, người dùng nhấn **“Xem thêm”** để mở danh sách mẫu có sẵn.
+
+    <Frame caption="Danh sách mẫu Navigation Bar">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image580_d071e0b5d3.png"
+        alt="Các mẫu Navigation Bar có sẵn"
+        style={{ borderRadius:"0.5rem" }}
+        title="Danh sách mẫu Navigation Bar"
+      />
+    </Frame>
   </Step>
-  <Step title="Tùy chỉnh phong cách">
-    - **Nền:** chọn hoặc xóa màu nền
-    - **Bo góc:** tùy chỉnh bo tròn góc
-    - **Viền:** chỉnh độ dày, màu sắc hoặc bật/tắt viền\
-      ![][image37] ![][image45]
-  </Step>
-  <Step title="Điều chỉnh tổng quan">
-    - Hiển thị/ẩn nhãn trang
-    - Chỉnh kích thước icon
-    - Đặt màu mặc định, màu kích hoạt, màu nền khi chọn\
-      ![][image48]
+
+  <Step title="Chọn và áp dụng mẫu">
+    Chọn mẫu mong muốn, sau đó nhấn vào biểu tượng <Icon icon="check-circle" color="#0a06e4" size={15} /> để áp dụng.
+
+    <Frame caption="Thay đổi mẫu thanh điều hướng">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image581_3df9e7021c.png"
+        alt="Thay đổi mẫu thanh Navigation Bar"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thay đổi mẫu Navigation Bar"
+      />
+    </Frame>
   </Step>
 </Steps>
+
+---
+
+Thanh điều hướng sẽ tự động cập nhật theo lựa chọn mới của người dùng.
