--- a/app-builder/builder/design-app/navigation-bar.mdx
+++ b/app-builder/builder/design-app/navigation-bar.mdx
@@ -4,15 +4,15 @@ description: "Description of your new file."
 icon: "grid-round-2-plus"
 ---
 
-## **3.2. Navigation Bar** 
+## **3.2. Navigation Bar**
 
-Người dùng có thể thao tác với **thanh điều hướng (Navigation Bar)** bao gồm:
+Người dùng có thể thao tác với **thanh điều hướng (Navigation Bar)** bao gồm các tính năng như sau:
 
-- Thêm trang mới trên thanh điều hướng  
-- Kéo thả để thay đổi vị trí các trang  
-- Chỉnh sửa trang  
-- Xóa trang  
-- Chọn mẫu thanh điều hướng phù hợp  
+- Thêm trang mới trên thanh điều hướng
+- Kéo thả để thay đổi vị trí các trang
+- Chỉnh sửa trang
+- Xóa trang
+- Chọn mẫu thanh điều hướng phù hợp
 - Tùy chỉnh các chỉ số hiển thị của thanh điều hướng
 
 <Frame caption="Giao diện thanh điều hướng">
@@ -41,10 +41,9 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Nhập thông tin trang mới">
-    - Nhập **tên trang**  
-    - Chọn **đường dẫn đến trang**: trang sẽ hiển thị khi người dùng nhấn nút này  
+    - Nhập **tên trang**
+    - Chọn **đường dẫn đến trang**: trang sẽ hiển thị khi người dùng nhấn nút này
     - Chọn **Icon mặc định** và **Icon kích hoạt**
 
     <Frame caption="Form nhập thông tin trang mới">
@@ -56,7 +55,6 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Xác nhận thêm trang">
     Người dùng nhấn **“Thêm trang”** để hoàn tất hoặc **“Hủy bỏ”** để hủy thao tác thêm trang.
 
@@ -77,7 +75,7 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
 
 <Steps>
   <Step title="Kéo thả để sắp xếp thứ tự trang">
-    Nhấn giữ biểu tượng <Icon icon="grip-vertical" color="#cfcfcf" size={15} /> tương ứng với từng trang, sau đó kéo đến vị trí mong muốn để thay đổi thứ tự hiển thị trên thanh điều hướng.  
+    Nhấn giữ biểu tượng <Icon icon="grip-vertical" color="#cfcfcf" size={15} /> tương ứng với từng trang, sau đó kéo đến vị trí mong muốn để thay đổi thứ tự hiển thị trên thanh điều hướng.
 
     <Frame caption="Thay đổi vị trí các trang">
       <img
@@ -107,10 +105,9 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Chỉnh sửa thông tin trang">
-    - Nhập **tên trang**  
-    - Chỉnh sửa **đường dẫn đến trang**  
+    - Nhập **tên trang**
+    - Chỉnh sửa **đường dẫn đến trang**
     - Chọn lại **Icon mặc định** và **Icon kích hoạt**
 
     <Frame caption="Form chỉnh sửa dữ liệu trang">
@@ -122,7 +119,6 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Lưu hoặc hủy chỉnh sửa">
     Người dùng nhấn **“Lưu chỉnh sửa”** để cập nhật thông tin hoặc **“Hủy bỏ”** nếu không muốn thay đổi.
 
@@ -154,7 +150,6 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Xác nhận thao tác xóa">
     Khi hộp thoại xuất hiện, người dùng chọn **“Xóa ngay”** để xác nhận hoặc **“Hủy”** để hủy thao tác.
 
@@ -186,7 +181,6 @@ Người dùng có thể thao tác với **thanh điều hướng (Navigation Ba
       />
     </Frame>
   </Step>
-
   <Step title="Chọn và áp dụng mẫu">
     Chọn mẫu mong muốn, sau đó nhấn vào biểu tượng <Icon icon="check-circle" color="#0a06e4" size={15} /> để áp dụng.
 
